chore(refactor): finish renaming timestamp to anchor (#786)

--- a/docker-compose.override.yml.example
+++ b/docker-compose.override.yml.example
@@ -11,7 +11,7 @@ services:
 
   poet-node:
     environment:
-      - ENABLE_TIMESTAMPING=true
+      - ENABLE_ANCHORING=true
     # volumes:
     #   - .:/usr/src/app
     # command: sleep infinity
