--- a/package.json
+++ b/package.json
@@ -78,6 +78,7 @@
     "babel-cli": "6.26.0",
     "babel-plugin-module-resolver": "3.1.1",
     "concurrently": "4.1.0",
+    "cuid": "2.1.4",
     "ipfs-api": "26.1.2",
     "nodemon": "1.18.6",
     "nyc": "poetapp/nyc#fbc2ed1",
