chore: Coverage Report (#897)

--- a/package.json
+++ b/package.json
@@ -10,11 +10,11 @@
     "build": "npm run build-clear && npm run build-ts && npm run build-babel",
     "lint": "tslint -p ./tsconfig.with-tests.json",
     "lint:fix": "tslint -p ./tsconfig.with-tests.json --fix",
-    "test": "npm run test:unit && npm run test:integration",
+    "test": "ts-node -r tsconfig-paths/register --files ./tests/index.ts",
     "test:unit": "ts-node -r tsconfig-paths/register -r reflect-metadata --files ./tests/unit/index.ts",
     "test:functional": "node ./dist/babel/tests/functional/index.js",
     "test:integration": "node ./dist/babel/tests/integration/index.js",
-    "coverage": "npm run coverage:unit && npm run coverage:integration",
+    "coverage": "nyc --report-dir ./.coverage npm run test",
     "coverage:unit": "nyc --report-dir ./.coverage-unit npm run test:unit",
     "coverage:integration": "nyc --report-dir ./.coverage-integration npm run test:integration",
     "copy-json": "rsync -a --include '*/' --include '*.json' --exclude '*' src/ dist/ts/src",
