chore: Go Back to Ts-Node (#917)

--- a/package.json
+++ b/package.json
@@ -12,11 +12,12 @@
     "lint:fix": "tslint -p ./tsconfig.with-tests.json --fix",
     "test": "ts-node -r tsconfig-paths/register --files ./tests/index.ts",
     "test:unit": "ts-node -r tsconfig-paths/register --files ./tests/unit/index.ts",
-    "test:functional": "node ./dist/babel/tests/functional/index.js",
-    "test:integration": "node ./dist/babel/tests/integration/index.js",
+    "test:functional": "ts-node -r tsconfig-paths/register --files ./tests/functional/index.ts",
+    "test:integration": "ts-node -r tsconfig-paths/register --files ./tests/integration/index.ts",
     "coverage": "nyc --report-dir ./.coverage npm run test",
     "coverage:unit": "nyc --report-dir ./.coverage-unit npm run test:unit",
     "coverage:integration": "nyc --report-dir ./.coverage-integration npm run test:integration",
+    "coverage:functional": "nyc --report-dir ./.coverage-functional npm run test:functional",
     "copy-json": "rsync -a --include '*/' --include '*.json' --exclude '*' src/ dist/ts/src",
     "build-clear": "rm -rf dist",
     "build-ts": "tsc && npm run copy-json",
