--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "bitcoin-core": "2.0.0",
     "bs58": "4.0.1",
     "form-data": "2.3.3",
+    "ipfs-http-client": "28.0.1",
     "joi": "14.3.0",
     "koa": "2.6.2",
     "koa-body": "4.0.4",
@@ -77,7 +78,6 @@
     "babel-plugin-module-resolver": "3.1.1",
     "concurrently": "4.1.0",
     "cuid": "2.1.4",
-    "ipfs-api": "26.1.2",
     "nyc": "poetapp/nyc#fbc2ed1",
     "riteway": "4.0.1",
     "semantic-release": "15.12.5",
