remove script as nvm causing issues

--- a/.travis.yml
+++ b/.travis.yml
@@ -20,6 +20,8 @@ before_install:
   - sudo rm /usr/local/bin/docker-compose
   - sudo curl -L "https://github.com/docker/compose/releases/download/${DOCKER_COMPOSE_VERSION}/docker-compose-$(uname -s)-$(uname -m)" -o /usr/local/bin/docker-compose
   - sudo chmod +x /usr/local/bin/docker-compose
+  - npm install semantic-release@15.13.1
+
 
 install:
   - docker-compose -f docker-compose.yml -f docker-compose.travis.yml up -d
@@ -45,6 +47,6 @@ deploy:
   - provider: script
     skip_cleanup: true
     script:
-      - source ./scripts/semver.sh
+      - npx semantic-release
     on:
       branch: master
