use same version of node

--- a/.travis.yml
+++ b/.travis.yml
@@ -25,6 +25,7 @@ before_install:
 install:
   - docker-compose -f docker-compose.yml -f docker-compose.travis.yml up -d
   - sleep 10
+  - nvm install
   - npm install semantic-release@15.13.1
 
 script:
