--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,11 +1,16 @@
 version: 2
-jobs:
- build:
-   machine: true
-   environment:
-      REPO: poetapp/poet-node
+
+defaults: &defaults
+    environment:
+      IMAGE_NAME: project_poet-node
+      REPO_NAME: poetapp/node
       DOCKER_COMPOSE_VERSION: 1.23.2
-   steps:
+    machine: true 
+
+jobs:
+  build:
+    <<: *defaults
+    steps:
       - checkout
       - run:
           name: Install Docker Compose
@@ -13,13 +18,61 @@ jobs:
             curl -L https://github.com/docker/compose/releases/download/${DOCKER_COMPOSE_VERSION}/docker-compose-`uname -s`-`uname -m` > ~/docker-compose
             chmod +x ~/docker-compose
             sudo mv ~/docker-compose /usr/local/bin/docker-compose
-      
       - run: docker-compose up -d
-
-      # lint
-      - run: docker-compose exec poet-node npm run lint
- 
-      # deploy the image
-      - run: docker-compose exec poet-node npm run coverage
-
+      - run: docker-compose exec frost-api npm run lint
+      - run: docker-compose exec frost-api npm run coverage
       - run: docker images
+
+  tag:
+    <<: *defaults
+    steps:
+      - run:
+          name: tag Docker image
+          command: |
+            docker tag "${IMAGE_NAME}" "${REPO_NAME}":"${CIRCLE_TAG}"
+            docker tag "${IMAGE_NAME}" "${REPO_NAME}":"latest"
+            docker images
+  release:
+    docker:
+      - image: circleci/node:8
+    steps:
+      - checkout
+      - run: npm install -g semantic-release
+      # Run optional required steps before releasing
+      # - run: npm run build-script
+      - run: npx semantic-release
+
+  push:
+    <<: *defaults
+    steps:
+      - run:
+          name: tag Docker image
+          command: |
+            docker login -u "${DOCKER_USER}" -p "${DOCKER_PASS}"
+            docker push "${REPO_NAME}"
+
+workflows:
+  version: 2
+  build_and_test:
+    jobs:
+      - build
+      - tag:
+          requires:
+            - build
+          #filters:
+          #  branches:
+          #    only: master
+      - release:
+          requires:
+            - build
+          #filters:
+          #  branches:
+          #    only: master
+      - push:
+          context: docker
+          requires:
+            - release
+          filters:
+            branches:
+              only: master
+
