--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -34,8 +34,7 @@ jobs:
           name: Get coverage report
           command: |
             mkdir -p /tmp/test-results
-            export CONTAINER_NAME=$(docker-compose ps poet-node | awk 'FNR==3{print $1}')
-            docker cp $(CONTAINER_NAME):/usr/src/app/.coverage > /tmp/test-results
+            docker cp roject_poet-node_1:/usr/src/app/.coverage > /tmp/test-results
       - run:
           name: Archive Docker image
           command: docker save -o image.tar ${IMAGE_NAME}
