feat(EthereumRegistryWriter): onCidAdded + transaction receipts (#953)

--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "bitcoin-core": "2.2.0",
     "bs58": "4.0.1",
     "form-data": "2.3.3",
+    "fp-ts": "2.2.0",
     "ipfs-http-client": "28.1.0",
     "joi": "14.3.0",
     "koa": "2.6.2",
@@ -67,13 +68,14 @@
     "koa-cors": "0.0.16",
     "koa-helmet": "4.0.0",
     "koa-router": "7.4.0",
+    "luxon": "1.21.2",
     "mongodb": "3.1.10",
     "node-fetch": "1.7.3",
     "pino": "4.17.6",
     "protobufjs": "6.8.8",
     "ramda": "0.26.1",
     "string-to-stream": "1.1.1",
-    "web3": "1.2.2"
+    "web3": "1.2.4"
   },
   "devDependencies": {
     "@po.et/tslint-rules": "2.2.0",
@@ -84,6 +86,7 @@
     "@types/koa": "2.0.47",
     "@types/koa-helmet": "3.1.2",
     "@types/koa-router": "7.0.35",
+    "@types/luxon": "1.21.0",
     "@types/mongodb": "3.3.8",
     "@types/node-fetch": "1.6.9",
     "@types/pino": "4.16.1",
